--- a/compositional_skills/writing/freeform/brainstorming/refute_claim/qna.yaml
+++ b/compositional_skills/writing/freeform/brainstorming/refute_claim/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: "Sure, I'd be happy to help you explore this topic. The use of genetically\
     \ modified (GM) mosquitoes is a complex issue with potential benefits and challenges.\
     \ Here are some points that are often brought up in discussions about the environmental\
@@ -29,3 +31,4 @@
     \ when evaluating the potential impacts of GM mosquitoes.\n"
   question: Identify potential challenges and refutations against the claim that the
     use of genetically modified mosquitoes is not harmful to the environment.
+task_description: ''
