--- a/compositional_skills/writing/freeform/poetry/ballad/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/ballad/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: '(Verse 1)
 
     In the heart of mountains, where secrets abide,
@@ -86,3 +88,4 @@
     Nature''s ballad, a timeless guest.'
   question: Write a ballad about a majestic mountain range and the secrets it holds
     within its peaks.
+task_description: ''
