--- a/compositional_skills/writing/freeform/prose/emails/formal/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/emails/formal/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: 'Subject: Inquiry Regarding the Status of My Internship Application
 
 
@@ -38,3 +40,4 @@
     [Your Contact Information]'
   question: Could you help me write a formal email to inquire about the progress of
     my internship application?
+task_description: ''
