--- a/compositional_skills/writing/freeform/prose/screenplay/qna.yaml
+++ b/compositional_skills/writing/freeform/prose/screenplay/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: '**Title: "The Final Heist"**
 
 
@@ -117,3 +119,4 @@
 
     '
   question: Write a screenplay about a heist gone wrong.
+task_description: ''
