--- a/compositional_skills/writing/freeform/technical/proposal/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/proposal/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: '# Technical Proposal: Mobile App Development
 
 
@@ -131,3 +133,4 @@
     and deliver a valuable tool for the target audience.'
   question: Write a technical proposal for the development of a mobile app, addressing
     user experience, functionality, and performance.
+task_description: ''
