--- a/compositional_skills/writing/freeform/technical/report/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/report/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: '# Technical Report: Microservices Architecture in Software Development
 
 
@@ -129,3 +131,4 @@
     and enhancing service coordination mechanisms.'
   question: Compose a technical report on the benefits and challenges of implementing
     microservices architecture in software development.
+task_description: ''
