--- a/compositional_skills/writing/freeform/technical/user_manual/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/user_manual/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: '# Manual: Performing a Security Audit for Small to Medium-Sized Businesses
 
 
@@ -171,3 +173,4 @@
     can identify vulnerabilities, assess risks, and implement effective security measures.'
   question: Write a manual on how to perform a security audit for a small to medium-sized
     business.
+task_description: ''
