--- a/compositional_skills/writing/grounded/summarization/wiki_insights/concise/qna.yaml
+++ b/compositional_skills/writing/grounded/summarization/wiki_insights/concise/qna.yaml
@@ -1,10 +1,12 @@
+created_by: shivsr
+seed_examples:
 - answer: Qurt Tappeh is a name of several villages in West Azerbaijan, Ardabil, and
     Razavi Khorasan provinces of Iran. In 2006, the population of Qurt Tappeh in West
     Azerbaijan was 316, in Ardabil it was 961, and in Razavi Khorasan it was 1,447.
     Shir Shotor is another village in Razavi Khorasan and its population was not reported
     in 2006. Jannatabad-e Jangal is a village in Razavi Khorasan with a population
     of 2,504 in 2006.
-  document: "Qurt Tappeh( also Romanized as Q\u016Brt Tappeh; also known as Q\u016B\
+  context: "Qurt Tappeh( also Romanized as Q\u016Brt Tappeh; also known as Q\u016B\
     t Tappeh) is a village in Torkaman Rural District, in the Central District of\
     \ Urmia County, West Azerbaijan Province, Iran.\n\nAt the 2006 census, its population\
     \ was 316, in 85 families.\nShir Shotor( also Romanized as Sh\u012Br Shotor and\
@@ -34,3 +36,4 @@
     \ in the Central District of Mashhad County, Razavi Khorasan Province, Iran.\n\
     \nAt the 2006 census, its existence was noted, but its population was not reported."
   question: Generate a concise summary for the given text.
+task_description: ''
