--- a/compositional_skills/extraction/linguistic/POS/conjunction/qna.yaml
+++ b/compositional_skills/extraction/linguistic/POS/conjunction/qna.yaml
@@ -1,3 +1,6 @@
-- answer:
-  document: 
-  question: 
+created_by: shivsr
+seed_examples:
+- answer: null
+  context: null
+  question: null
+task_description: ''
