--- a/compositional_skills/writing/freeform/brainstorming/idea_generation/qna.yaml
+++ b/compositional_skills/writing/freeform/brainstorming/idea_generation/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: '1. "Eco-Hero Challenge": Create an interactive campaign that encourages
     customers to become "Eco-Heroes" by switching to your sustainable home products.
     Provide a checklist of eco-friendly actions to take, such as replacing single-use
@@ -33,3 +35,4 @@
     '
   question: Generate 5 creative ideas for a marketing campaign promoting a new line
     of eco-friendly or sustainable products for the home.
+task_description: ''
