--- a/compositional_skills/writing/freeform/brainstorming/support_claim/qna.yaml
+++ b/compositional_skills/writing/freeform/brainstorming/support_claim/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: '1. Universal healthcare ensures equitable access to medical services: A
     just society is one that strives to provide equal opportunities and resources
     to all its members, regardless of their background or economic status. By implementing
@@ -30,3 +32,4 @@
     '
   question: Produce three convincing arguments that support the claim that universal
     healthcare is a necessary component of a just society.
+task_description: ''
