--- a/compositional_skills/writing/freeform/legal/contracts/qna.yaml
+++ b/compositional_skills/writing/freeform/legal/contracts/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: "# Business Contract\n\nThis Business Contract (\"Contract\") is entered\
     \ into on [Date], by and between [Your Full Name or Company Name] (\"Service Provider\"\
     ) and [Client's Full Name or Company Name] (\"Client\").\n\n## 1. Terms\n\nThe\
@@ -30,3 +32,4 @@
     Date: ___________________________\n"
   question: I require help drafting a business contract for a service I will provide.
     Can you outline the terms, payment schedule, and liability clauses?
+task_description: ''
