--- a/compositional_skills/writing/freeform/poetry/freeverse/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/freeverse/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: 'In the waning days of summer''s reign,
 
     A subtle shift begins to stir.
@@ -51,3 +53,4 @@
 
     The promise of springtime breaks anew.'
   question: Write a free verse poem that explores the changing colors of autumn leaves.
+task_description: ''
