--- a/compositional_skills/writing/freeform/poetry/haiku/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/haiku/qna.yaml
@@ -1,6 +1,9 @@
+created_by: shivsr
+seed_examples:
 - answer: 'Crimson leaf adrift,
 
     Dancing on a cool fall breeze,
 
     Nature''s art takes flight.'
   question: Write a haiku that captures the beauty of a single autumn leaf.
+task_description: ''
