--- a/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: 'A flower so bright in the glade,
 
     By insects is never unlaid.
@@ -9,3 +11,4 @@
     In a dance of life, unafraid.'
   question: Write a limerick that playfully describes a flower's bloom and its effect
     on nearby insects.
+task_description: ''
