--- a/compositional_skills/writing/freeform/poetry/narrative_poetry/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/narrative_poetry/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: 'In the heart of the valley, where time''s river flows,
 
     Stands a solitary tree, in repose.
@@ -62,3 +64,4 @@
     In the heart of the valley, under the soft moonlight.'
   question: Write a narrative poem about a solitary tree that has witnessed centuries
     of change in the surrounding landscape.
+task_description: ''
