--- a/compositional_skills/writing/freeform/poetry/ode/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/ode/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: 'Ode to the Lightning''s Power and Inspiration
 
 
@@ -73,3 +75,4 @@
     A spark of inspiration, pure and bright.'
   question: Craft an ode to the power of the lightning, and how it can help you to
     tap into the beauty of creativity and inspiration.
+task_description: ''
