--- a/compositional_skills/writing/freeform/poetry/sonnet/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/sonnet/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: 'In autumn''s grand and regal tapestry,
 
     Where vibrant hues in splendor are unfurled.
@@ -29,3 +31,4 @@
 
     A vibrant farewell, in nature''s tranquil trance.'
   question: Compose a sonnet that portrays the vibrant colors of a fall foliage.
+task_description: ''
