--- a/compositional_skills/writing/freeform/social_media/facebook/qna.yaml
+++ b/compositional_skills/writing/freeform/social_media/facebook/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: "Hey friends! \U0001F31F Let's talk about organization and time management\
     \ hacks! \U0001F4C5\U0001F4DD I'm always looking for new ways to stay on top of\
     \ my game, and I'd love to hear what works for you. Do you have a favorite app,\
@@ -8,3 +10,4 @@
   question: Hoping to get some discussion going on Facebook? Help me share a post
     asking your friends about their favorite ways to stay organized and manage their
     time.
+task_description: ''
