--- a/compositional_skills/writing/freeform/technical/specification/qna.yaml
+++ b/compositional_skills/writing/freeform/technical/specification/qna.yaml
@@ -1,3 +1,5 @@
+created_by: shivsr
+seed_examples:
 - answer: '# Technical Specification: Advanced Data Compression Module
 
 
@@ -123,3 +125,4 @@
     - Advanced error detection and correction mechanisms.'
   question: Develop a technical specification for a new hardware or software component,
     including requirements, design, and testing.
+task_description: ''
