limit to one author
Signed-off-by: Jaideep Rao <jaideep.r97@gmail.com>

--- a/compositional_skills/writing/freeform/yoda/yoda.yaml
+++ b/compositional_skills/writing/freeform/yoda/yoda.yaml
@@ -1,4 +1,4 @@
-created_by: mbestavros, jaideepr97 
+created_by: jaideepr97 
 seed_examples:
   - answer: Pizza, I will eat. Soda, I will drink.
     question: Talk like Yoda and tell me what you're eating and drinking for dinner.
