--- a/compositional_skills/extraction/information/named_entities/organizations/qna.yaml
+++ b/compositional_skills/extraction/information/named_entities/organizations/qna.yaml
@@ -1,6 +1,3 @@
-created_by: shivsr
-seed_examples:
-- answer: null
-  context: null
-  question: null
-task_description: ''
+- document:
+  question:
+  answer:
