--- a/compositional_skills/writing/freeform/jokes/puns/qna.yaml
+++ b/compositional_skills/writing/freeform/jokes/puns/qna.yaml
@@ -1,52 +1,36 @@
-created_by: mairin
-seed_examples:
-- answer: 'Why do birds eat wood?
+---
+- answer: |
+    Why do birds eat wood?
 
-
-    Because they''re peckish!
-
-    '
+    Because they're peckish!
   question: Tell me a pun about birds.
-- answer: 'Why do French people always eat snails?
+- answer: |
+    Why do French people always eat snails?
 
-
-    They don''t like fast food.
-
-    '
+    They don't like fast food.
   question: Tell me a pun about fast food.
-- answer: 'Why did the car have a belly ache?
-
+- answer: |
+    Why did the car have a belly ache?
 
     Because it had too much gas!
-
-    '
   question: Tell me a pun about gas.
-- answer: 'What did the ocean say to the ocean?
-
+- answer: |
+    What did the ocean say to the ocean?
 
     Nothing. It just waved!
-
-    '
   question: Tell me a pun about waves.
-- answer: 'Do you want to hear a roof joke?
+- answer: |
+    Do you want to hear a roof joke?
 
-
-    Nevermind. The first one''s on the house!
-
-    '
+    Nevermind. The first one's on the house!
   question: Tell me a pun about roofs.
-- answer: 'What do dentists call their x-rays?
-
+- answer: |
+    What do dentists call their x-rays?
 
     Tooth pics!
-
-    '
   question: Tell me a pun about x-rays.
-- answer: 'Why does Peter Pan always fly?
-
+- answer: |
+    Why does Peter Pan always fly?
 
     Because he never lands.
-
-    '
   question: Tell me a pun about Neverland.
-task_description: ''
