--- a/compositional_skills/writing/grounded/editing/punctuation/qna.yaml
+++ b/compositional_skills/writing/grounded/editing/punctuation/qna.yaml
@@ -1,5 +1,3 @@
-created_by: shivsr
-seed_examples:
 - answer: Deswa is an Indian Bhojpuri language film written and directed by Nitin
     Chandra.\n\nThe film is a social drama - crime thriller Bhojpuri genre.\n\nThe
     first film to be produced by actress Neetu Chandra.\n\nThe film introduces new
@@ -13,7 +11,7 @@ seed_examples:
     the very face of Bhojpuri cinema."\n\nDeswa is the first Bhojpuri film in 50 years
     to get selected at Indian Panorama section of International Film Festival of India,
     which was enough to support the vision of Neetu Chandra.
-  context: "Deswa, is an Indian Bhojpuri language film, written and directed by Nitin\
+  document: "Deswa, is an Indian Bhojpuri language film, written and directed by Nitin\
     \ Chandra. The film, is a social drama - crime thriller Bhojpuri genre. The first\
     \ film to be produced by actress Neetu Chandra. The film introduces new actors\
     \ Ajay Kumar, Deepak Singh and Kranti Prakash Jha in lead roles along with critically\
@@ -27,4 +25,3 @@ seed_examples:
     \ to get selected at Indian Panorama section of International Film Festival of\
     \ India, which was enough to support the vision of Neetu Chandra. \n"
   question: Return the text after correcting any punctuation errors.
-task_description: ''
