--- a/compositional_skills/writing/grounded/meeting_insights/minutes_of_meeting/qna.yaml
+++ b/compositional_skills/writing/grounded/meeting_insights/minutes_of_meeting/qna.yaml
@@ -1,5 +1,3 @@
-created_by: shivsr
-seed_examples:
 - answer: '**Minutes of Meeting**
 
 
@@ -102,7 +100,7 @@ seed_examples:
     **Prepared by:** [Insert Name]
 
     **Approved by:** [Insert Name]'
-  context: '*Ms. Patel:* Good morning, everyone. Today, we''re here to discuss ways
+  document: '*Ms. Patel:* Good morning, everyone. Today, we''re here to discuss ways
     to enhance employee engagement. I''d love to hear your ideas.
 
 
@@ -159,4 +157,3 @@ seed_examples:
     suggestions and create an action plan. We''ll reconvene next week to discuss the
     next steps.'
   question: Could you generate the minutes of the meeting from the given transcript?
-task_description: ''
