--- a/compositional_skills/writing/freeform/jokes/puns/joke.yml
+++ b/compositional_skills/writing/freeform/jokes/puns/joke.yml
@@ -1,4 +1,4 @@
-created_by: mairin
+created_by: raghu
 seed_examples:
 - question: Tell me a pun about trees.
   answer: "Why was the tree so bad at making friends?
