--- a/compositional_skills/extraction/inference/qualitative/sentiment/qna.yaml
+++ b/compositional_skills/extraction/inference/qualitative/sentiment/qna.yaml
@@ -1,12 +1,6 @@
 created_by: IBM Research
 seed_examples:
-- answer: '- 5
-
-    - 1
-
-    - 3
-
-    '
+- answer: "[5,1,3]"
   context: This science fiction movie released on July 5, 2021, was phenomenal. The
     special effects, the acting, the plot - everything was top-notch.\n2. Never before
     have I been so disappointed with a movie. The plot was predictable, and the characters
