add another question
Signed-off-by: Pablo Ridolfi <pabloridolfi@gmail.com>

--- a/compositional_skills/extraction/inference/quantitative/sort_alphabetically/qna.yaml
+++ b/compositional_skills/extraction/inference/quantitative/sort_alphabetically/qna.yaml
@@ -52,4 +52,58 @@ seed_examples:
     Saint Lucia, Canada, Antigua and Barbuda, Paraguay, Curacao, Argentina, 
     Costa Rica, Brazil
   question: Sort the American countries alphabetically. List them one country per line.
+- answer: |
+    Albania
+    Andorra
+    Austria
+    Belarus
+    Belgium
+    Bosnia and Herzegovina
+    Bulgaria
+    Croatia
+    Czech Republic (Czechia)
+    Denmark
+    Estonia
+    Finland
+    France
+    Germany
+    Greece
+    Holy See
+    Hungary
+    Iceland
+    Ireland
+    Italy
+    Latvia
+    Liechtenstein
+    Lithuania
+    Luxembourg
+    Malta
+    Moldova
+    Monaco
+    Montenegro
+    Netherlands
+    North Macedonia
+    Norway
+    Poland
+    Portugal
+    Romania
+    Russia
+    San Marino
+    Serbia
+    Slovakia
+    Slovenia
+    Spain
+    Sweden
+    Switzerland
+    Ukraine
+    United Kingdom
+  context: |
+    Russia, Germany, United Kingdom, France, Italy, Spain, Poland, Ukraine, 
+    Romania, Netherlands, Belgium, Sweden, Czech Republic (Czechia), Greece,
+    Portugal, Hungary, Belarus, Austria, Switzerland, Serbia, Bulgaria, 
+    Denmark, Slovakia, Finland, Norway, Ireland, Croatia, Moldova, 
+    Bosnia and Herzegovina, Albania, Lithuania, Slovenia, North Macedonia,
+    Latvia, Estonia, Luxembourg, Montenegro, Malta, Iceland, Andorra, 
+    Liechtenstein, Monaco, San Marino, Holy See
+  question: 'Sort the European countries alphabetically. List them one country per line.'
 task_description: ''
